<resources>
    <string name="app_name">LinkAge Plus Referral</string>
    <string-array name="engReferrerOptions">
        <item>GP</item>
        <item>Police</item>
        <item>Fire and Rescue</item>
        <item>Paramedic</item>
        <item>Pharmacist</item>
        <item>Meals on Wheels</item>
        <item>Linkage</item>
        <item>Social Worker</item>
        <item>Local Charity</item>
        <item>Paid Carer</item>
        <item>Friend, Family or Neighbour</item>
        <item>Person In Need of Help</item>
        <item>Other</item>
    </string-array>
    <string-array name="genderOptions">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="bnggenderOptions">
        <item>Puruṣa</item>
        <item>Mahilā</item>
    </string-array>
    <string-array name="chigenderOptions">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="fragenderOptions">
        <item>Mâle</item>
        <item>Femelle</item>
    </string-array>
    <string-array name="espgenderOptions">
        <item>Masculino</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="itagenderOptions">
        <item>Maschio</item>
        <item>Femmina</item>
    </string-array>
    <string-array name="somgenderOptions">
        <item>Lab</item>
        <item>Dumar</item>
    </string-array>
    <string-array name="bngReferrerOptions">
        <item>Sādhāraṇa anuśīlanakārī</item>
        <item>Puliśa</item>
        <item>Agni ēbaṁ rēsaki\'u</item>
        <item>Pyārāmēḍika</item>
        <item>Kampa\'uṇḍāra</item>
        <item>Cākāra upara khābāra</item>
        <item>Liṅkēja</item>
        <item>Samāja karmī</item>
        <item>Sthānīẏa cyāriṭi</item>
        <item>Pradatta paricaryā</item>
        <item>Bandhu, paribāra bā āśapāśa</item>
        <item>Sāhāyya praẏōjana byaktira praẏōjana</item>
        <item>An\'yān\'ya</item>
    </string-array>
    <string-array name="chiReferrerOptions">
        <item>全科医生</item>
        <item>警察</item>
        <item>消防和救援</item>
        <item>护理人员</item>
        <item>药剂师</item>
        <item>送餐上门</item>
        <item>连锁</item>
        <item>社会工作者</item>
        <item>当地的慈善事业</item>
        <item>有偿护老者</item>
        <item>朋友，家人或邻居</item>
        <item>需要帮助的人</item>
        <item>其他</item>
    </string-array>
    <string-array name="fraReferrerOptions">
        <item>Médecin généraliste</item>
        <item>Police</item>
        <item>Feu et sauvetage</item>
        <item>Paramédical</item>
        <item>Pharmacien</item>
        <item>Repas sur roues</item>
        <item>Lien</item>
        <item>Travailleur social</item>
        <item>Charité locale</item>
        <item>Payé Carer</item>
        <item>Ami, famille ou voisin</item>
        <item>Personne ayant besoin d\'aide</item>
        <item>Autre</item>
    </string-array>
    <string-array name="espReferrerOptions">
        <item>Médico general</item>
        <item>Policía</item>
        <item>Fuego y rescate</item>
        <item>Paramédico</item>
        <item>Farmacéutico</item>
        <item>Comidas a domicilio</item>
        <item>Enlace</item>
        <item>Trabajador social</item>
        <item>Caridad local</item>
        <item>Cuidador pagado</item>
        <item>Amigo, familia o vecino</item>
        <item>Persona que necesita ayuda</item>
        <item>Otro</item>
    </string-array>
    <string-array name="itaReferrerOptions">
        <item>Medico di famiglia</item>
        <item>Polizia</item>
        <item>Fuoco e salvataggio</item>
        <item>Paramedico</item>
        <item>Farmacista</item>
        <item>Pasti su ruote</item>
        <item>Collegamento</item>
        <item>Assistente sociale</item>
        <item>Carità locale</item>
        <item>Carer a pagamento</item>
        <item>Amico, famiglia o vicino</item>
        <item>Persona che ha bisogno di aiuto</item>
        <item>Altro</item>
    </string-array>
    <string-array name="somReferrerOptions">
        <item>Dhakhtar guud</item>
        <item>Booliska</item>
        <item>Dabka iyo Badbaadinta</item>
        <item>Kalkaaliye caafimaad</item>
        <item>Farmashiistaha</item>
        <item>Cuntooyinka ku yaala wheels</item>
        <item>Isku xirka</item>
        <item>Shaqaale bulsho</item>
        <item>Hay\'ad samafal oo maxalli ah</item>
        <item>Daryeele mushahar ah</item>
        <item>Saaxiibka, Qoyska ama Deriska</item>
        <item>Qofka u baahan caawimo</item>
        <item>Kale</item>
    </string-array>
    <string name="title_activity_languages">LanguagesActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="social_isolation">Social isolation</string>
    <string name="social_isolation_on">Social isolation \n(SELECTED)</string>
    <string name="social_isolation_off">Social isolation \n(NOT SELECTED)</string>
    <string name="safety_at_home">Safety at home</string>
    <string name="safety_at_home_on">Safety at home \n(SELECTED)</string>
    <string name="safety_at_home_off">Safety at home \n(NOT SELECTED)</string>
    <string name="legal_help">Legal Help</string>
    <string name="legal_help_on">Legal Help \n(SELECTED)</string>
    <string name="legal_help_off">Legal Help \n(NOT SELECTED)</string>
    <string name="crisis">Crisis</string>
    <string name="crisis_on">Crisis \n(SELECTED)</string>
    <string name="crisis_off">Crisis \n(NOT SELECTED)</string>
    <string name="transport_mobility"><![CDATA[Transport & Mobility]]></string>
    <string name="transport_mobility_on"><![CDATA[Transport & Mobility \n(SELECTED)]]></string>
    <string name="transport_mobility_off"><![CDATA[Transport & Mobility \n(NOT SELECTED)]]></string>
    <string name="later_life_planning">Later life planning</string>
    <string name="later_life_planning_on">Later life planning \n(SELECTED)</string>
    <string name="later_life_planning_off">Later life planning \n(NOT SELECTED)</string>
    <string name="help_around_the_house">Help around the house</string>
    <string name="help_around_the_house_on">Help around the house \n(SELECTED)</string>
    <string name="help_around_the_house_off">Help around the house \n(NOT SELECTED)</string>
    <string name="staying_in_their_home">Staying in their home</string>
    <string name="staying_in_their_home_on">Staying in their home \n(SELECTED)</string>
    <string name="staying_in_their_home_off">Staying in their home \n(NOT SELECTED)</string>
    <string name="money_benefits"><![CDATA[Money & Benefits]]></string>
    <string name="money_benefits_on"><![CDATA[Money & Benefits \n(SELECTED)]]></string>
    <string name="money_benefits_off"><![CDATA[Money & Benefits \n(NOT SELECTED)]]></string>
    <string name="i_am_eng">I am a</string>
    <string name="i_am_bng">Āmi ēkajana</string>
    <string name="i_am_chi">我是一个</string>
    <string name="i_am_fra">Je suis un</string>
    <string name="i_am_esp">Soy un</string>
    <string name="i_am_ita">Sono un</string>
    <string name="i_am_som">Anigu waxaan ahay a</string>
    <string name="register_eng">Register</string>
    <string name="register_bng">Nibandhana</string>
    <string name="register_chi">寄存器</string>
    <string name="register_fra">Registre</string>
    <string name="register_esp">Registro</string>
    <string name="register_ita">Registrare</string>
    <string name="register_som">Isdiiwaangalin</string>
    <string name="dont_register_eng">Proceed without registering</string>
    <string name="dont_register_bng">Nibandhana chāṛā\'i ēgiẏē yāna</string>
    <string name="dont_register_chi">继续未注册</string>
    <string name="dont_register_fra">Procéder sans inscription</string>
    <string name="dont_register_esp">Proceda sin registrarse</string>
    <string name="dont_register_ita">Procedere senza registrarsi</string>
    <string name="dont_register_som">Ku sii wad inaadan diiwaangelin</string>
    <string name="name_eng">Name:</string>
    <string name="name_bng">Nāma:</string>
    <string name="name_chi">名字:</string>
    <string name="name_fra">Prénom:</string>
    <string name="name_esp">Nombre:</string>
    <string name="name_ita">Nome:</string>
    <string name="name_som">Magaca:</string>
    <string name="email_eng">Email:</string>
    <string name="email_bng">I-mē\'ila:</string>
    <string name="email_chi">电子邮件:</string>
    <string name="email_fra">Email:</string>
    <string name="email_esp">correo electrónico:</string>
    <string name="email_ita">Email:</string>
    <string name="email_som">Email:</string>
    <string name="phone_eng">Phone:</string>
    <string name="phone_bng">Phōna:</string>
    <string name="phone_chi">电话号码:</string>
    <string name="phone_fra">Téléphone:</string>
    <string name="phone_esp">Teléfono:</string>
    <string name="phone_ita">Telefono:</string>
    <string name="phone_som">telefoonka:</string>
    <string name="addr_eng">Address:</string>
    <string name="addr_bng">Ṭhikānā:</string>
    <string name="addr_fra">Adresse:</string>
    <string name="addr_esp">Dirección:</string>
    <string name="addr_ita">Indirizzo:</string>
    <string name="addr_chi">地址:</string>
    <string name="addr_som">Cinwaanka:</string>
    <string name="work_eng">Work Address:</string>
    <string name="work_bng">Kājēra ṭhikānā:</string>
    <string name="work_chi">工作地址:</string>
    <string name="work_fra">Adresse de travail:</string>
    <string name="work_esp">Dirección del trabajo:</string>
    <string name="work_ita">Indirizzo di lavoro:</string>
    <string name="work_som">Cinwaanka shaqada:</string>
    <string name="more_info_eng">Please provide as much information as possible</string>
    <string name="more_info_bng">Ānugraha karē yatagulō sambhaba tathya sarabarāha karuna</string>
    <string name="more_info_chi">请尽可能地提供更多的资料</string>
    <string name="more_info_fra">Merci de bien vouloir indiquer autant d\'informations que possible</string>
    <string name="more_info_esp">Por favor, proporcione tanta información como sea posible</string>
    <string name="more_info_ita">Si prega di fornire quante più informazioni possibili</string>
    <string name="more_info_som">Fadlan sii sida ugu badan ee suurtogalka ah</string>
    <string name="next_eng">Next</string>
    <string name="next_bng">Parabartī</string>
    <string name="next_chi">下一个</string>
    <string name="next_fra">Prochain</string>
    <string name="next_esp">Siguiente</string>
    <string name="next_ita">Il prossimo</string>
    <string name="next_som">Xigta</string>
    <string name="volunteer_eng">Volunteer</string>
    <string name="volunteer_bng">Sbēcchāsēbaka</string>
    <string name="volunteer_chi">志愿者</string>
    <string name="volunteer_fra">Bénévole</string>
    <string name="volunteer_esp">Voluntario</string>
    <string name="volunteer_ita">Volontario</string>
    <string name="volunteer_som">Tabaruciin</string>
    <string name="urgent_eng">Urgent</string>
    <string name="urgent_bng">Jarurī</string>
    <string name="urgent_chi">紧急</string>
    <string name="urgent_fra">Urgent</string>
    <string name="urgent_esp">Urgente</string>
    <string name="urgent_ita">Urgente</string>
    <string name="urgent_som">Degdeg ah</string>
    <string name="nonurgent_eng">Non-Urgent</string>
    <string name="nonurgent_bng">A jarurī</string>
    <string name="nonurgent_chi">非紧急</string>
    <string name="nonurgent_fra">Non urgent</string>
    <string name="nonurgent_esp">No urgente</string>
    <string name="nonurgent_ita">Non urgenti</string>
    <string name="nonurgent_som">Xaalad degdeg ah</string>
    <string name="title_activity_language_selection_dialog">LanguageSelectionDialog</string>
    <string name="medical_off">Medical Issue (Not Selected)</string>
    <string name="medical_on">Medical Issue (Selected)</string>
    <string name="title_activity_additional_information_submit">AdditionalInformationSubmit</string>
</resources>