<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="code_for_good.linkage.IssueSelector">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="350dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ToggleButton
                android:id="@+id/buttonIsolation"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:textOff="@string/social_isolation"
                android:textOn="@string/social_isolation" />

            <ToggleButton
                android:id="@+id/buttonSafetlyAtHome"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:textOn="@string/safety_at_home"
                android:textOff="@string/safety_at_home" />

            <ToggleButton
                android:id="@+id/buttonLegal"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:textOn="@string/legal_help"
                android:textOff="@string/legal_help" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ToggleButton
                android:id="@+id/buttonCrisis"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:textOn="@string/crisis"
                android:textOff="@string/crisis" />

            <ToggleButton
                android:id="@+id/buttonTransport"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:textOn="@string/transport_mobility"
                android:textOff="@string/transport_mobility" />

            <ToggleButton
                android:id="@+id/buttonLifePlanning"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:text="@string/later_life_planning" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ToggleButton
                android:id="@+id/buttonHelpAroundTheHouse"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:text="@string/help_around_the_house" />

            <ToggleButton
                android:id="@+id/buttonStayingInTheirHome"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:text="@string/staying_in_their_home" />

            <ToggleButton
                android:id="@+id/buttonMoneyAndBenefits"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_toggle"
                android:text="@string/money_benefits" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
