<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name_eng"
            android:textColor="#000000"
            android:textSize="@dimen/fontSize" />

        <EditText
            android:id="@+id/profileInputName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/lineSplitMargin"
        android:layout_marginTop="@dimen/lineSplitMargin"
        android:background="@color/colorSeparatorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone_eng"
            android:textColor="#000000"
            android:textSize="@dimen/fontSize" />

        <EditText
            android:id="@+id/profileInputPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="phone"
            android:textAlignment="textEnd"
            android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/lineSplitMargin"
        android:layout_marginTop="@dimen/lineSplitMargin"
        android:background="@color/colorSeparatorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email_eng"
            android:textColor="#000000"
            android:textSize="@dimen/fontSize" />

        <EditText
            android:id="@+id/profileInputEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSizeSmall" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/lineSplitMargin"
        android:layout_marginTop="@dimen/lineSplitMargin"
        android:background="@color/colorSeparatorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addrView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addr_eng"
            android:textColor="#000000"
            android:textSize="@dimen/fontSize" />

        <EditText
            android:id="@+id/profileInputAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSizeSmall" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/lineSplitMargin"
        android:layout_marginTop="@dimen/lineSplitMargin"
        android:background="@color/colorSeparatorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/work_eng"
            android:textColor="#000000"
            android:textSize="@dimen/fontSize" />

        <EditText
            android:id="@+id/profileInputWorkAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textSizeSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/moreinfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_info_eng"
        android:textAlignment="center"
        android:textSize="@dimen/textSizeSmall" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/profileInputNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Next"
        android:textSize="@dimen/fontSize" />
</LinearLayout>